--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"eslint": "^7.20.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.14.0",
+		"react-flippy": "^0.1.5",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.2",
@@ -40,8 +41,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {
-		"webpack": "^5.24.0"
 	}
 }
