--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "fuck-this-shit",
 	"version": "0.1.0",
 	"private": true,
+	"engines": {
+		"node": "v10.19.0",
+		"npm": "~6.14.4"
+	},
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
