--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"bootstrap": "^4.6.0",
 		"eslint": "^7.20.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.14.0",
