--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"engines": {
-		"node": "v10.19.0",
+		"node": "10.19.0",
 		"npm": "~6.14.4"
 	},
 	"dependencies": {
@@ -11,6 +11,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"bootstrap": "^4.6.0",
+		"bootstrap-css-only": "^4.4.1",
 		"eslint": "^7.20.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.14.0",
