--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"npm": "~6.14.4"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.15.2",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
