--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"bootstrap": "^4.6.0",
 		"bootstrap-css-only": "^4.4.1",
 		"eslint": "^7.20.0",
+		"mdbreact": "^5.0.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.14.0",
 		"react-flippy": "^0.1.5",
