--- a/package.json
+++ b/package.json
@@ -53,9 +53,14 @@
 	"devDependencies": {
 		"eslint": "^7.31.0",
 		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-node": "^4.1.0",
+		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-react": "^7.24.0",
-		"eslint-plugin-react-hooks": "^1.7.0"
+		"eslint-plugin-react-hooks": "^1.7.0",
+		"prettier": "^2.3.2"
 	}
 }
